addd: estilo aplicado ao menu de navegacao

--- a/index.html
+++ b/index.html
@@ -15,27 +15,34 @@
     <div class="menu-navegacao">
         <nav>
             <img src="img/foto-pedro-lopes.jpg" alt="Foto Pedro Lopes">
-            <ul>
+            <ul class="lista-menu-navegacao">
             <li class="item-menu-navegacao">
-            <a href="#info-pessoais">Inforções Pessoais</a>
+                <i class="fa-solid fa-user"></i>
+                <a href="#info-pessoais">Inforções Pessoais</a>
             </li>
             <li class="item-menu-navegacao">
-            <a href="#objetivo-profi">Objetivo Profissional</a>
+                <i class="fa-solid fa-bullseye"></i>
+                <a href="#objetivo-profi">Objetivo Profissional</a>
             </li>
             <li class="item-menu-navegacao">
-            <a href="#experiencia-profi">Experiência Profissional</a>
+                <i class="fa-solid fa-briefcase"></i>
+                <a href="#experiencia-profi">Experiência Profissional</a>
             </li>
             <li class="item-menu-navegacao">
-            <a href="#formacao">Formação Academica</a>
+                <i class="fa-solid fa-graduation-cap"></i>
+                <a href="#formacao">Formação Academica</a>
             </li>
             <li class="item-menu-navegacao">
-            <a href="#habilidades">Habilidades e Competencias</a>
+                <i class="fa-solid fa-laptop-code"></i>
+                <a href="#habilidades">Habilidades e Competencias</a>
             </li>
             <li class="item-menu-navegacao">
-            <a href="#portifolio">Portfólio Pessoal</a>
+                <i class="fa-solid fa-file"></i>
+                <a href="#portifolio">Portfólio Pessoal</a>
             </li>
             <li class="item-menu-navegacao">
-            <a href="#redes-sociais">Redes Sociais</a>
+                <i class="fa-solid fa-hashtag"></i>
+                <a href="#redes-sociais">Redes Sociais</a>
             </li>
         </ul>
         </nav>
@@ -70,7 +77,7 @@
                 <ul>
                     <li>
                         <p>
-                            Estagiário de projetos: Atualmente trabalho no departamentos de Projetos da IRTrade,
+                            Estagiário de projetos: Atualmente trabalho no departamentos de Projetos da <a href="https://irtrade.com.br/" target="_blank">IRTrade</a>,
                             no qual desempenho a função de desenvolver expecificações para o departamento de Desenvolvimento realizar o desenvolvimento com maior facilidade,
                             alêm das expecificações eu gerencio os chamados que os usuários do sistema abrem para sugerir melhorias ou implementações no sistema.
                         </p>
