--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Mozilla+Headline&display=swap" rel="stylesheet">
-    <title>Currículo - Pedro Lopes</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Mozilla+Headline&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Mozilla+Headline&display=swap" rel="stylesheet">
+<title>Currículo - Pedro Lopes</title>
 </head>
 <body>
     <div class="container">
@@ -50,7 +53,7 @@
     <div class="conteudo">
         <div class="titulo-pagina">
             <h1>Pedro da Costa Lopes</h1>
-            <h3>Estudante de Desenvolvimento Back-end</h3>
+            <h3>ESTUDANTE DE ENGENHARIA DE SOFTWARE</h3>
         </div>
         <div id="info-pessoais">
             <section>
@@ -77,7 +80,7 @@
                 <ul>
                     <li>
                         <p>
-                            Estagiário de projetos: Atualmente trabalho no departamentos de Projetos da <a href="https://irtrade.com.br/" target="_blank">IRTrade</a>,
+                            Estagiário de projetos: Atualmente trabalho no departamentos de Projetos da <a href="https://irtrade.com.br/" target="_blank" class="link-texto">IRTrade</a>,
                             no qual desempenho a função de desenvolver expecificações para o departamento de Desenvolvimento realizar o desenvolvimento com maior facilidade,
                             alêm das expecificações eu gerencio os chamados que os usuários do sistema abrem para sugerir melhorias ou implementações no sistema.
                         </p>
@@ -96,35 +99,35 @@
             <section>
 
                 <h3><i class="fa-solid fa-graduation-cap"></i> Formação Academica</h3>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Engenharia de Software - Universidade Positivo</h4>
                     <p>Data Inicio: 02/2025 <br>Data de Termino (Previsão): 12/2028</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Curso Técnico de Desenvolvimento Web Básico - SENAC</h4>
                     <p>Data Inicio: 02/2022 <br>Data de Termino: 12/2024</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">C# - Programação Orientada a Objetos + Projetos - Udemy</h4>
                     <p>Data Inicio: 08/2025 <br>Data de Termino (Previsão): 12/2025</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Introdução ao Desenvolvimento Web - Escola DNC</h4>
                     <p>Data Inicio: 02/2025 <br>Data de Termino: 03/2025</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Fundamentos de JavaScript</h4>
                     <p>Data Inicio: 07/2025 <br>Data de Termino: 09/2025</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Lógica de programação: mergulhe em programação com JavaScript - Alura</h4>
                     <p>Data Inicio: 02/2024 <br>Data de Termino: 02/2024</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Lógica de programação: Explore funções e listas - Alura</h4>
                     <p>Data Inicio: 02/2024 <br>Data de Termino: 02/2024</p>
                 </div>
-                <div class="item-fomacao">
+                <div class="item-formacao">
                     <h4 class="titulo-formacao">Python para Data Science: Primeiros passos - Alura</h4>
                     <p>Data Inicio: 02/2024 <br>Data de Termino: 03/2024</p>
                 </div>
@@ -134,7 +137,7 @@
             <section>
                 <h3><i class="fa-solid fa-laptop-code"></i> Habilidades e Competencias</h3>
                 <h4>Hard Skills</h4>
-                <ul>
+                <ul class="lista-habilidades">
                     <li>C#</li>
                     <li>Node.js</li>
                     <li>C</li>
@@ -148,7 +151,7 @@
                     <li>GitHub</li>
                 </ul>
                 <h4>Soft Skills</h4>
-                <ul>
+                <ul class="lista-habilidades">
                     <li>Comunicação acertiva</li>
                     <li>Trabalho em equipe</li>
                     <li>Proatividade</li>                
@@ -158,15 +161,15 @@
         <div id="portfolio">
             <section>
                 <h3><i class="fa-solid fa-file"></i> Portifólio</h3>
-                <p>Segue o link para o meu portfólio no GitHub: <a href="https://github.com/pedooor013">@pedooor013</a></p>
+                <p>Segue o link para o meu portfólio no GitHub: <a href="https://github.com/pedooor013" target="_blank" class="link-texto">@pedooor013</a></p>
             </section>
         </div>
         <div id="redes-sociais">
             <section>
                 <h3><i class="fa-solid fa-hashtag"></i> Redes Sociais</h3>
                 <ol>
-                    <li><i class="fa-brands fa-linkedin"></i> LinkedIn: <a href="www.linkedin.com/in/pedrolopesprog013">Pedro Lopes</a></li>
-                    <li><i class="fa-brands fa-github"></i> GitHub: <a href="https://github.com/pedooor013">@pedooor013</a></li>
+                    <li><i class="fa-brands fa-linkedin"></i> LinkedIn: <a href="www.linkedin.com/in/pedrolopesprog013" target="_blank" class="link-texto">Pedro Lopes</a></li>
+                    <li><i class="fa-brands fa-github"></i> GitHub: <a href="https://github.com/pedooor013" target="_blank" class="link-texto">@pedooor013</a></li>
                     <li><i class="fa-brands fa-google"></i> E-mail: pedrolopes.programador013@gmail.com</li>
                 </ol>
             </section>
