fixx: correção erro no link linkedin

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <section>
                 <h3><i class="fa-solid fa-hashtag"></i> Redes Sociais</h3>
                 <ol>
-                    <li><i class="fa-brands fa-linkedin"></i> LinkedIn: <a href="www.linkedin.com/in/pedrolopesprog013" target="_blank" class="link-texto">Pedro Lopes</a></li>
+                    <li><i class="fa-brands fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/pedrolopesprog013/" target="_blank" class="link-texto">Pedro Lopes</a></li>
                     <li><i class="fa-brands fa-github"></i> GitHub: <a href="https://github.com/pedooor013" target="_blank" class="link-texto">@pedooor013</a></li>
                     <li><i class="fa-brands fa-google"></i> E-mail: pedrolopes.programador013@gmail.com</li>
                 </ol>
